Move away of deprecated Class.newInstnace.
Class.getDeclaredConstructor().newInstance() is the preferred way.

Change-Id: I3a555fdd9db6b233b53d22a7ac3bfac490b98120
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>